--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav nav">
           <li class="nav-item">
-            <a class="nav-link" href="#school" data-toggle="pill">Rishiraj</a>
+            <a class="nav-link" href="#school" data-toggle="pill">School</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#teacher" data-toggle="pill">Teacher</a>
