--- a/only-for match.html
+++ b/only-for match.html
@@ -1,103 +1,39 @@
-<div class="content pdt book-content">
+<div class="content pdt content-page">
 	<div class="breadcrumb-wrap">
 		<ul class="breadcrumb container">
 			<li><a href="{% url 'dashboard' %}">Dashboard</a></li>
 			<li><a href="{% url 'content' %}">Content</a></li>
-			<li><a href="{% url 'lesson' %}">{{ lesson_plan_data.chapter_no }}</a></li>
-			<li><a href="{% url 'lesson' %}">Lession Plan</a></li>
 		</ul>
 	</div>
+	<form action="{% url " add_chapter_in_session" %}" method="post" id="myform">
+		{% csrf_token %}
+	</form>
 	<div class="container pt-4">
-		<div class="chap-header">
-			<h3 class="unit">{{ unit_with_chapter.unit_name }}</h3>
-			<h1>{{ lesson_plan_data.chapter_no }}{{ unit_with_chapter.chapter_name }}</h1>
+		<div class="row">
+			<div class="col-10 col-sm-8 col-lg-4 mx-auto mb-2">
+				<h1>Content</h1>
+				<hr class="hr-style hr-style2">
+			</div>
 		</div>
-		<div class="tab-head">
-			<ul class="nav nav-tabs">
-				<li class="nav-item active">
-					<a class="nav-link" href="{% url 'lesson' %}">Lesson plan</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link " href="{% url 'lesson' %}">Question bank</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link " href="{% url 'lesson' %}">Word search</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="{% url 'lesson' %}">Brainstorm</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link " href="{% url 'lesson' %}">Tell your teacher</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link " href="{% url 'lesson' %}">Find out</a>
-				</li>
-			</ul>
-		</div>
-		<div class="tab-content p-4">
-			<section class=" bg-gray" id="accordion-style-1">
-				<div class="accordion" id="accordionExample">
-					<div class="card">
-						<div class="card-header" id="headingOne">
-							<h5 class="mb-0">
-								<button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-									<i class="fa fa-angle-double-right mr-3"></i>Goal
-								</button>
-							</h5>
-						</div>
-						<div id="collapseOne" class="collapse show fade" aria-labelledby="headingOne" data-parent="#accordionExample">
-							<div class="card-body">
-								{{ lesson_plan_data.goal }}
-							</div>
-						</div>
-					</div>
-					<div class="card">
-						<div class="card-header" id="headingTwo">
-							<h5 class="mb-0">
-								<button class="btn btn-link collapsed btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-									<i class="fa fa-angle-double-right mr-3"></i>Objectives
-								</button>
-							</h5>
-						</div>
-						<div id="collapseTwo" class="collapse fade" aria-labelledby="headingTwo" data-parent="#accordionExample">
-							<div class="card-body">
-								{{ lesson_plan_data.objective }}
-							</div>
-						</div>
-					</div>
-					<div class="card">
-						<div class="card-header" id="headingThree">
-							<h5 class="mb-0">
-								<button class="btn btn-link collapsed btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-									<i class="fa fa-angle-double-right mr-3"></i>Teaching
-									Aids
-								</button>
-							</h5>
-						</div>
-						<div id="collapseThree" class="collapse fade" aria-labelledby="headingThree" data-parent="#accordionExample">
-							<div class="card-body">
-								{{ lesson_plan_data.teaching_aids }}
-							</div>
-						</div>
-					</div>
-					<div class="card">
-						<div class="card-header" id="headingFour">
-							<h5 class="mb-0">
-								<button class="btn btn-link collapsed btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-									<i class="fa fa-angle-double-right mr-3"></i>Teaching
-									Suggestions
-								</button>
-							</h5>
-						</div>
-						<div id="collapseFour" class="collapse fade" aria-labelledby="headingFour" data-parent="#accordionExample">
-							<div class="card-body">
-								{{ lesson_plan_data.teaching_seggestions }}
-							</div>
-						</div>
-					</div>
+		<div class="col-12 col-lg-10 col-xl-8 mx-auto">
+			{% for key,value in class_with_unit_dict %}
+		       <div class="chapter-list row">
+				  <div class="col-12 hr-style2 unit-card ">
+				      <h4>{{ key }}</h4>
 				</div>
-			</section>
+				{% for key, value in value.items %}
+				<div class="col-1 col-md-2 tx-c chap-count">{{ key }}</div>
+				<div class="col-11 col-md-10 hr-style">
+					<a href="{% url 'lesson' %}" class="class_id" alt="{{ key.id }}">{{ value }}</a>
+				</div>
+				{% endfor %}
+			</div>
+			{% endfor %}
 		</div>
-	</div>
+ 	</div>
 </div>
- 
+
+
+
+
+
