--- a/assets/video/class-one/index.html
+++ b/assets/video/class-one/index.html
@@ -42,7 +42,7 @@
     <!-- HEADER END -->
 
     <!-- CONTENT START -->
-    <div class="content pdt pb-0">
+    <div class="content pdt pb-0 stu-digi-page">
         <div class="breadcrumb-wrap">
             <div class="container d-sm-flex justify-content-sm-between">
                 <ul class="breadcrumb">
@@ -56,7 +56,9 @@
             </div>
         </div>
         <div class="container-fluid p-0">
-            <embed src="index.swf" width="100%" style="height: 100vh; max-width:100%; ">
+            <div class="stu-digi-wrap">
+                <embed src="index.swf" width="100%" >
+            </div>
         </div>
     </div>
     <!-- FOOTER START -->
@@ -74,6 +76,14 @@
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script src="../../js/bootstrap.min.js"></script>
     <script src="../../js/site.js"></script>
-
+    <script>
+        $(document).ready(function() {
+            $("header").click(function() {
+                  var x = $("header").innerHeight();
+                alert(x);
+            });
+        });
+    </script>
 </body>
+
 </html>
