--- a/smart-content/samples/book/pages/page24.html
+++ b/smart-content/samples/book/pages/page24.html
@@ -1,10 +1,3 @@
 <div class="book-content">
-
-
-<p class="center-pic">
-<img src="samples/steve-jobs/pics/08.jpg" width="350" height="230" style="margin:100px 0px;" class="zoom-this">
-</p>
-
-
+	 <img style="max-width: 100%;" src="samples/steve-jobs/pics/023.jpg">	 
 </div>
-<span class="page-number">24</span>
