--- a/smart-content/samples/book/pages/page57.html
+++ b/smart-content/samples/book/pages/page57.html
@@ -1,22 +1,3 @@
 <div class="book-content">
-<p class="no-indent">
-Apple’s arch-rival Microsoft.
-</p>
-
-<p>
-But he progressively started to sense Pixar was going to be a lot more important to his career than he ever expected. According to many, the
-revelation came in January 1995, when he was invited to a Disney event in New York. In the middle of Central Park, the movie studio had set up a
-gigantic tent with a movie screen showing previews of the two upcoming Disney films, Pocahontas, to be released in the summer, and Toy Story, for
-Thanksgiving 1995.
-</p>
-
-<blockquote>
-That was the moment Steve realized the Disney deal would materialize into something much bigger than he had ever imagined, and that Pixar was the way out of his morass with NeXT.
-</blockquote>
-
-<cite>
-Pixar’s Ralph Guggenheim quoted in Alan Deutschman's The Second Coming of Steve Jobs
-</cite>
-
+	 <img style="max-width: 100%;" src="samples/steve-jobs/pics/056.jpg">	 
 </div>
-<span class="page-number">57</span>
