--- a/smart-content/samples/book/pages/page96.html
+++ b/smart-content/samples/book/pages/page96.html
@@ -1,8 +1,3 @@
 <div class="book-content">
-
-<p class="center-pic" style="margin:100px 0;">
-	<img src="samples/steve-jobs/pics/44.jpg" width="252" height="378">
-</p>
-
+	 <img style="max-width: 100%;" src="samples/steve-jobs/pics/095.jpg">	 
 </div>
-<span class="page-number">96</span>
