pull and push the pages

--- a/smart-content/samples/book/index.html
+++ b/smart-content/samples/book/index.html
@@ -20,8 +20,8 @@
 			<div depth="5" class="hard front-side"> <div class="depth"></div> </div>
 			<div class="own-size"></div>
 			<div class="own-size even"></div>
-			<div class="hard fixed back-side p-s-last"> <div class="depth"></div> </div>
-			<div class="hard p-last"></div>
+<!--			<div class="hard fixed back-side p114"> <div class="depth"></div> </div>-->
+<!--			<div class="hard p115"></div>-->
 		</div>
 	</div>
 	<div id="slider-bar" class="turnjs-slider">
@@ -167,7 +167,7 @@ function loadApp() {
 		autoCenter: true,
 		gradients: true,
 		duration: 1000,
-		pages: 115,
+		pages: 113,
 		when: {
 			turning: function(e, page, view) {
 				
@@ -206,9 +206,9 @@ function loadApp() {
 					$('.sj-book .p2').removeClass('fixed');
 
 				if (page<book.turn('pages'))
-					$('.sj-book .p-s-last').addClass('fixed');
+					$('.sj-book .p111').addClass('fixed');
 				else
-					$('.sj-book .p-s-last').removeClass('fixed');
+					$('.sj-book .p111').removeClass('fixed');
 
 				Hash.go('page/'+page).update();
 					
