--- a/smart-content/samples/book/index.html
+++ b/smart-content/samples/book/index.html
@@ -27,11 +27,13 @@
 	<div id="slider-bar" class="turnjs-slider">
 		<div id="slider"> <p> </p></div>
 	</div>
+	<button class="a">Zoom</button>
 </div>
 
 
 <script type="text/javascript">
 
+    
 function loadApp() {
 	
 	var flipbook = $('.sj-book');
