--- a/memory-game/game-1/index.html
+++ b/memory-game/game-1/index.html
@@ -1,261 +1,259 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <title>Day 15 demo 2 - Memory game - WS300</title>
-  
-  
-  
-      <style>
-      /* NOTE: The styles were added inline because Prefixfree needs access to your styles and they must be inlined if they are on local disk! */
-      .cf:before,
-.cf:after {
-	content: " ";
-	display: table;
-}
+    <meta charset="UTF-8">
+    <title>Day 15 demo 2 - Memory game - WS300</title>
 
-.cf:after {
-	clear: both;
-}
 
-body {
-	font-family: calibri, sans-serif;
-}
 
-h1 {
-	width: 100%;
-	text-align: center;
-}
+    <style>
+        /* NOTE: The styles were added inline because Prefixfree needs access to your styles and they must be inlined if they are on local disk! */
+        .cf:before,
+        .cf:after {
+            content: " ";
+            display: table;
+        }
 
-#stage {
-	margin: 0 auto;
-	width: 800px;
-	text-align: center;
-}
+        .cf:after {
+            clear: both;
+        }
 
-.flip {
-	-webkit-perspective: 800;
-	position: relative;
-	margin: 50px auto;
-	height: 220px;
-	width: 121px;
-	float: left;
-	margin: 5px;
-}
+        body {
+            font-family: calibri, sans-serif;
+        }
 
-.flip .card.flipped {
-	-webkit-transform: rotatey(-180deg);
-}
+        h1 {
+            width: 100%;
+            text-align: center;
+        }
 
-.flip .card {
-	width: 100%;
-	height: 100%;
-	-webkit-transform-style: preserve-3d;
-	-webkit-transition: 0.5s;
-}
+        #stage {
+            margin: 0 auto;
+            width: 800px;
+            text-align: center;
+        }
 
-.flip .card .face {
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	-webkit-backface-visibility: hidden;
-	z-index: 2;
-}
+        .flip {
+            -webkit-perspective: 800;
+            position: relative;
+            margin: 50px auto;
+            height: 220px;
+            width: 121px;
+            float: left;
+            margin: 5px;
+        }
 
-.flip .card .front {
-	position: absolute;
-	z-index: 1;
-	cursor: pointer;
-}
+        .flip .card.flipped {
+            -webkit-transform: rotatey(-180deg);
+        }
 
-.flip .card .back {
-	-webkit-transform: rotatey(-180deg);
-	cursor: pointer;
-}
+        .flip .card {
+            width: 100%;
+            height: 100%;
+            -webkit-transform-style: preserve-3d;
+            -webkit-transition: 0.5s;
+        }
 
-.button {
-	text-align: center;
-	background-color: cadetblue;
-	font-size: 2.25em;
-	padding: 0.25em;
-	width: 220px;
-	margin: 0 auto;
-	margin-top: 30px;
-	color: white;
-	font-weight: bold;
-	border-radius: 15px;
-	cursor: pointer;
-}
+        .flip .card .face {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            -webkit-backface-visibility: hidden;
+            z-index: 2;
+        }
 
-.green {
-	background: lightgreen;
-	border: solid 5px  lightgreen;
-}
+        .flip .card .front {
+            position: absolute;
+            z-index: 1;
+            cursor: pointer;
+        }
 
-.pink {
-	background: pink;
-	border: solid 5px  pink;
-}
+        .flip .card .back {
+            -webkit-transform: rotatey(-180deg);
+            cursor: pointer;
+        }
 
-.blue {
-	background: skyblue;
-	border: solid 5px  skyblue;
-}
+        .button {
+            text-align: center;
+            background-color: cadetblue;
+            font-size: 2.25em;
+            padding: 0.25em;
+            width: 220px;
+            margin: 0 auto;
+            margin-top: 30px;
+            color: white;
+            font-weight: bold;
+            border-radius: 15px;
+            cursor: pointer;
+        }
 
-.gray {
-	background: lightgray;
-	border: solid 5px  lightgray;
-}
+        .green {
+            background: lightgreen;
+            border: solid 5px lightgreen;
+        }
 
-.red {
-	background: lightsalmon;
-	border: solid 5px  lightsalmon;
-}
+        .pink {
+            background: pink;
+            border: solid 5px pink;
+        }
 
-.purple {
-	background: thistle;
-	border: solid 5px  thistle;
-}
+        .blue {
+            background: skyblue;
+            border: solid 5px skyblue;
+        }
 
-.
+        .gray {
+            background: lightgray;
+            border: solid 5px lightgray;
+        }
+
+        .red {
+            background: lightsalmon;
+            border: solid 5px lightsalmon;
+        }
+
+        .purple {
+            background: thistle;
+            border: solid 5px thistle;
+        }
     </style>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
+<!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>-->
 
 </head>
 
 <body>
 
-  
-<!--<h1>Match the Socks</h1>-->
-<div id="stage">
-	<div class="flip">
-		<div class="card">
-			<div class="face front">
-				<img src="http://melissacabral.com/demos/javascript/images/socks/background.png">
-			</div>
-			<div class="face back">
-				<img src="">
-			</div>
-		</div>
-	</div>
-	<div class="flip">
-		<div class="card">
-			<div class="face front">
-				<img src="http://melissacabral.com/demos/javascript/images/socks/background.png">
-			</div>
-			<div class="face back">
-				<img src="">
-			</div>
-		</div>
-	</div>
-	<div class="flip">
-		<div class="card">
-			<div class="face front">
-				<img src="http://melissacabral.com/demos/javascript/images/socks/background.png">
-			</div>
-			<div class="face back">
-				<img src="">
-			</div>
-		</div>
-	</div>
-	<div class="flip">
-		<div class="card">
-			<div class="face front">
-				<img src="http://melissacabral.com/demos/javascript/images/socks/background.png">
-			</div>
-			<div class="face back">
-				<img src="">
-			</div>
-		</div>
-	</div>
-	<div class="flip">
-		<div class="card">
-			<div class="face front">
-				<img src="http://melissacabral.com/demos/javascript/images/socks/background.png">
-			</div>
-			<div class="face back">
-				<img src="">
-			</div>
-		</div>
-	</div>
-	<div class="flip">
-		<div class="card">
-			<div class="face front">
-				<img src="http://melissacabral.com/demos/javascript/images/socks/background.png">
-			</div>
-			<div class="face back">
-				<img src="">
-			</div>
-		</div>
-	</div>
-	<div class="flip">
-		<div class="card">
-			<div class="face front">
-				<img src="http://melissacabral.com/demos/javascript/images/socks/background.png">
-			</div>
-			<div class="face back">
-				<img src="">
-			</div>
-		</div>
-	</div>
-	<div class="flip">
-		<div class="card">
-			<div class="face front">
-				<img src="http://melissacabral.com/demos/javascript/images/socks/background.png">
-			</div>
-			<div class="face back">
-				<img src="">
-			</div>
-		</div>
-	</div>
-	<div class="flip">
-		<div class="card">
-			<div class="face front">
-				<img src="http://melissacabral.com/demos/javascript/images/socks/background.png">
-			</div>
-			<div class="face back">
-				<img src="">
-			</div>
-		</div>
-	</div>
-	<div class="flip">
-		<div class="card">
-			<div class="face front">
-				<img src="http://melissacabral.com/demos/javascript/images/socks/background.png">
-			</div>
-			<div class="face back">
-				<img src="">
-			</div>
-		</div>
-	</div>
-	<div class="flip">
-		<div class="card">
-			<div class="face front">
-				<img src="http://melissacabral.com/demos/javascript/images/socks/background.png">
-			</div>
-			<div class="face back">
-				<img src="">
-			</div>
-		</div>
-	</div>
-	<div class="flip">
-		<div class="card">
-			<div class="face front">
-				<img src="http://melissacabral.com/demos/javascript/images/socks/background.png">
-			</div>
-			<div class="face back">
-				<img src="">
-			</div>
-		</div>
-	</div>
-</div>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
 
-  
+    <!--<h1>Match the Socks</h1>-->
+    <div id="stage">
+        <div class="flip">
+            <div class="card">
+                <div class="face front">
+                    <img src="http://melissacabral.com/demos/javascript/images/socks/background.png">
+                </div>
+                <div class="face back">
+                    <img src="">
+                </div>
+            </div>
+        </div>
+        <div class="flip">
+            <div class="card">
+                <div class="face front">
+                    <img src="http://melissacabral.com/demos/javascript/images/socks/background.png">
+                </div>
+                <div class="face back">
+                    <img src="">
+                </div>
+            </div>
+        </div>
+        <div class="flip">
+            <div class="card">
+                <div class="face front">
+                    <img src="http://melissacabral.com/demos/javascript/images/socks/background.png">
+                </div>
+                <div class="face back">
+                    <img src="">
+                </div>
+            </div>
+        </div>
+        <div class="flip">
+            <div class="card">
+                <div class="face front">
+                    <img src="http://melissacabral.com/demos/javascript/images/socks/background.png">
+                </div>
+                <div class="face back">
+                    <img src="">
+                </div>
+            </div>
+        </div>
+        <div class="flip">
+            <div class="card">
+                <div class="face front">
+                    <img src="http://melissacabral.com/demos/javascript/images/socks/background.png">
+                </div>
+                <div class="face back">
+                    <img src="">
+                </div>
+            </div>
+        </div>
+        <div class="flip">
+            <div class="card">
+                <div class="face front">
+                    <img src="http://melissacabral.com/demos/javascript/images/socks/background.png">
+                </div>
+                <div class="face back">
+                    <img src="">
+                </div>
+            </div>
+        </div>
+        <div class="flip">
+            <div class="card">
+                <div class="face front">
+                    <img src="http://melissacabral.com/demos/javascript/images/socks/background.png">
+                </div>
+                <div class="face back">
+                    <img src="">
+                </div>
+            </div>
+        </div>
+        <div class="flip">
+            <div class="card">
+                <div class="face front">
+                    <img src="http://melissacabral.com/demos/javascript/images/socks/background.png">
+                </div>
+                <div class="face back">
+                    <img src="">
+                </div>
+            </div>
+        </div>
+        <div class="flip">
+            <div class="card">
+                <div class="face front">
+                    <img src="http://melissacabral.com/demos/javascript/images/socks/background.png">
+                </div>
+                <div class="face back">
+                    <img src="">
+                </div>
+            </div>
+        </div>
+        <div class="flip">
+            <div class="card">
+                <div class="face front">
+                    <img src="http://melissacabral.com/demos/javascript/images/socks/background.png">
+                </div>
+                <div class="face back">
+                    <img src="">
+                </div>
+            </div>
+        </div>
+        <div class="flip">
+            <div class="card">
+                <div class="face front">
+                    <img src="http://melissacabral.com/demos/javascript/images/socks/background.png">
+                </div>
+                <div class="face back">
+                    <img src="">
+                </div>
+            </div>
+        </div>
+        <div class="flip">
+            <div class="card">
+                <div class="face front">
+                    <img src="http://melissacabral.com/demos/javascript/images/socks/background.png">
+                </div>
+                <div class="face back">
+                    <img src="">
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
 
-    <script  src="js/index.js"></script>
+
+
+    <script src="js/index.js"></script>
 
 
 
