--- a/memory-game/fill-blank/index.html
+++ b/memory-game/fill-blank/index.html
@@ -13,22 +13,22 @@
 	<p class="question-description">Fill in the blanks by dragging the missing answer.</p>
 	<ul class="options">
 		<li class="title">Options</li>
-		<li class="option" data-target="carraway">Nick Carraway</li>
-		<li class="option" data-target="fitz">F. Scott Fitzgerald</li>
-		<li class="option" data-target="westegg">West Egg</li>
-		<li class="option" data-target="buchanan">Tom Buchanan</li>
-		<li class="option" data-target="daisy">Daisy</li>
-		<li class="option" data-target="ashes">Valley of Ashes</li>
+        <li class="option" data-target="carraway">Lorem Ipsum</li>
+        <li class="option" data-target="fitz">Lorem </li>
+        <li class="option" data-target="westegg">Lorem is</li>
+        <li class="option" data-target="buchanan">Ipsum is</li>
+        <li class="option" data-target="daisy">typesetting industry</li>
+        <li class="option" data-target="ashes">printing</li>
 	</ul>
 <div class="answers">
 	<ol>
-		<li class=""><span class="target" data-accept="fitz">&nbsp;</span>, a native of St Paul, Minnesota, and also a member of the "Lost Generation" finished four novels including "This Side of Paradise".</li>
+        <li class=""><span class="target" data-accept="fitz">&nbsp;</span>, Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's.</li>
 		
-        <li class=""><span class="target" data-accept="carraway">&nbsp;</span> attended Yale with the large and brooding<span class="target" data-accept="buchanan">&nbsp;</span>.</li>
+        <li class=""><span class="target" data-accept="carraway">&nbsp;</span> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's<span class="target" data-accept="buchanan">&nbsp;</span>.</li>
 		
-        <li class="">George Wilson owns an unsuccessful garage in an area known as the <span class="target" data-accept="ashes">&nbsp;</span>, where Tom brings Nick for a party.</li>
+        <li class="">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's</li>
 		
-        <li class="">Jay Gatsby, the Buchanans, and Nick himself all make<span class="target" data-accept="westegg">&nbsp;</span>their home.</li>
+        <li class="">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's</li>
 	</ol>
 </div>
  <button type="submit" value="submit">Submit</button>
@@ -42,9 +42,7 @@
 </div>
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 <script src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js'></script>
-
-  
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js'></script>  
 
     <script  src="js/index.js"></script>
 
