fill in the blank

--- a/memory-game/fill-blank/index.html
+++ b/memory-game/fill-blank/index.html
@@ -24,7 +24,7 @@
 	<ol>
         <li class=""><span class="target" data-accept="fitz">&nbsp;</span>, Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's.</li>
 		
-        <li class=""><span class="target" data-accept="carraway">&nbsp;</span> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's<span class="target" data-accept="buchanan">&nbsp;</span>.</li>
+        <li class=""><span class="target" data-accept="westegg">&nbsp;</span> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's<span class="target" data-accept="ashes">&nbsp;</span>.</li>
 		
         <li class="">Lorem Ipsum is simply dummy text of the printing and typesetting <span class="target" data-accept="buchanan">&nbsp;</span> industry. Lorem Ipsum has been the industry's</li>
 		
