--- a/smart-content2/samples/book/index.html
+++ b/smart-content2/samples/book/index.html
@@ -28,8 +28,8 @@
                 </div>
                 <div class="own-size"></div>
                 <div class="own-size even"></div>
-                <!--			<div class="hard fixed back-side p114"> <div class="depth"></div> </div>-->
-                <!--			<div class="hard p115"></div>-->
+                			<div class="hard fixed back-side p131"> <div class="depth"></div> </div>
+                			<div class="hard p132"></div>
             </div>
         </div>
         <div id="slider-bar" class="turnjs-slider">
@@ -179,7 +179,7 @@
                 autoCenter: true,
                 gradients: true,
                 duration: 1000,
-                pages: 129,
+                pages: 131,
                 when: {
                     turning: function(e, page, view) {
 
@@ -218,9 +218,9 @@
                             $('.sj-book .p2').removeClass('fixed');
 
                         if (page < book.turn('pages'))
-                            $('.sj-book .p111').addClass('fixed');
+                            $('.sj-book .p131').addClass('fixed');
                         else
-                            $('.sj-book .p111').removeClass('fixed');
+                            $('.sj-book .p131').removeClass('fixed');
 
                         Hash.go('page/' + page).update();
 
